--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,9 @@ body {
         margin: 4mm;
     }
 }
+
+.register-form-personal {
+    display: inline-block;
+    margin: 8px;
+    width: 233px;
+}
